duration font size

--- a/you_list.html
+++ b/you_list.html
@@ -665,9 +665,9 @@
             font-weight: 600;
             color: #6c757d;
             background: #f8f9fa;
-            padding: 4px 8px;
-            border-radius: 4px;
-            font-size: 10x;
+            padding: 2px 4px;
+            border-radius: 3px;
+            font-size: 11px;
         }
 
         .video-link {
