drop down padding: 0px 10px;   line-height: 1.0;   min-height: 20px;

--- a/you_list.html
+++ b/you_list.html
@@ -234,12 +234,14 @@
         }
 
         .category-item {
-            padding: 4px 16px;
+            padding: 0px 10px !important;
             display: flex;
             align-items: center;
             gap: 8px;
             transition: background-color 0.2s ease;
             border-bottom: 1px solid #f8f9fa;
+            line-height: 1.0 !important;
+            min-height: 20px !important;
         }
 
         .category-item:hover {
